# fiirust2022

homework/: readme.md  table1.txt  table2.txt
labs/l10/: readme.md
labs/l10/archives/: 1.archive  2.archive
labs/l11/: readme.md
labs/l11/hello_world/: Cargo.toml
labs/l11/hello_world/hello_world/: Cargo.toml
labs/l11/hello_world/hello_world/src/: main.rs
labs/l11/hello_world/hello_world_lib/: Cargo.toml
labs/l11/hello_world/hello_world_lib/src/: lib.rs
labs/l3/: readme.md
labs/l4/: readme.md
labs/l5/: life.game  life2.game  p2.rs  readme.md
labs/l6/: readme.md
labs/l7/: readme.md
labs/l8/: readme.md
labs/l9/: readme.md
labs/l9/fiirust_wasm/: Cargo.toml  index.html  index.js
labs/l9/fiirust_wasm/src/: lib.rs
